# pyrsercomb

./: .gitignore  Makefile  README.md  pyproject.toml
pyrsercomb/: __init__.py  basic.py  core.py  enums.py  forward.py  functions.py  strings.py
tests/: test_basic.py  test_enums.py  test_strings.py  test_while_lang.py
